fixed right margin
in some places my animation would be cut off.  I think I fixed it

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html{
 	font-family:"Helvetica Neue", Helvetica, Gotham, Arial, sans-serif;
 	font-weight:300;
 	background-color:#E3D7AF;
-	}
+}
 
 .grid {
 	width: 100%;
@@ -11,7 +11,7 @@ html{
 	clear:both;
 	overflow:hidden;
 }
-a {
+    a {
         text-decoration: none;
         color: #8D4647;
     }
@@ -19,40 +19,41 @@ a {
         color: #568E7F;
     }
 
-.clearfix:before,
-.clearfix:after {
-	content: "";
-	display: table;
-}
+    .clearfix:before,
+    .clearfix:after {
+        content: "";
+        display: table;
+    }
 
-.clearfix:after {
-	clear:both;
-}
+    .clearfix:after {
+        clear:both;
+    }
 
-.clearfix {
-	*zoom: 1; 
-}
+    .clearfix {
+        *zoom: 1; 
+    }
+
 
 @media screen and (min-width: 15em) {
 header {
 	display:block;
-	z-index:2;
+	z-index:1;
 	overflow:hidden;
 	clear:both;
     margin-bottom: 2em;
 }
 .header-image {
-	width:120%;
-	z-index:2;
-	right:-1.25em;
-	margin-top: 5em;
+	width:110%;
+	z-index:3;
+	right:1.em;
+	margin-top: 4.6em;
 	position:relative;
 }
 
 .socialmediaicons {
     position: absolute;
-	top: 7.9em;
-	z-index:2;
+	top: 8.5em;
+	z-index:3;
     width: 17%;
 	margin-left: 1em;
 }
@@ -175,25 +176,47 @@ hr {
 }
 
     
-@media screen and (min-width: 23.75em) {
+@media screen and (min-width: 20em) {
 .header-image {
 	width:110%;
 	right:0em;
+    margin-top: -1.2em;
 }
 
-.socialmediaicons {
+/*.socialmediaicons {
 	top: 10.5em;
     width: 15%;
 }
+
+ .horizontal-socialmedia{
+    display:none;
+}
+*/
+.socialmediaicons{
+    display:none;
+}
+.horizontal-socialmedia{
+    display:block;
+    position: relative;
+    z-index:4;
+    margin-bottom: 0;
+    margin-top:-3.5em;
+    margin-left:1em;
+}
+.socialmedia img{
+	width: 10%;
+    max-width:50px;
+	margin: 8px .3em 0 0;
+	list-style: none;
+	display: inline;
+    float: left;
+    opacity: 1;
+}   
 .socialmedia img{
 	margin: 8px .2em 0 0;
 }
-    .horizontal-socialmedia{
-    display:none;
-}
-
 .initial-paragraph{
-	width:50%;
+	width:55%;
 	font-size: 13px;
 	/*overflow:hidden;*/
 }
@@ -210,9 +233,10 @@ p {
         overflow-y: hidden;
         margin-bottom: 30px;
     }*/
-    
+
+/*THIS IS MAKING ME SO UPSET*/    
 .bluebar {
-    margin-top: -.7em;
+    margin-top: -.1em;
 	}
 
 .socialmedia-bottom img{
@@ -235,8 +259,8 @@ header {
 .header-image {
 	width:110%;
 	z-index:2;
-	right:-2em;
-	top:-5em;
+	right:0.5em;
+	top:-8em;
 	margin-top: 5em;
 	position:relative;
 }
@@ -246,11 +270,13 @@ header {
 }
 .horizontal-socialmedia{
     display:block;
-    margin-top:-11em;
+    position: relative;
+    z-index:4;
+    margin-top:-14em;
     margin-left:2em;
 }
 .socialmedia img{
-	width: 20%;
+	width: 10%;
     max-width:50px;
 	margin: 8px .3em 0 0;
 	list-style: none;
@@ -265,7 +291,7 @@ header {
 	position:absolute;
 	width:45%;
 	margin-left: 2em;
-	top: 5em;
+	top: 2em;
 	color:#8D4647;
 	line-height: 1.3;
 	font-size: 15px;
@@ -282,10 +308,10 @@ p {
 	margin-bottom: 10px;
 }
 
-    .wrapper {
+   /*.wrapper {
         overflow-y: hidden;
         margin-bottom: 30px;
-    }
+    }*/
     
 .bluebar {
 	background-color:#568E7F;
@@ -366,7 +392,7 @@ p {
 .header-image {
 	width:110%;
 	z-index:2;
-	right:-2em;
+	right:1.9em;
 	top:-11em;
 	margin-top: 5em;
 	position:relative;
@@ -438,7 +464,7 @@ p {
 .header-image {
 	width:110%;
 	z-index:2;
-	right:-2em;
+	right:2em;
 	top:-11em;
 	margin-top: 5em;
 	position:relative;
@@ -475,23 +501,22 @@ p {
 	overfow:hidden;
 }
 
-
 .initial-paragraph h1{
 	color:#568E7F;
 	font-family: 'Cookie', cursive;
 	font-size: 55px;
 	margin-bottom: 10px;
-}
+    }
 	.col-1-2-md img{
         display: inline;
         width:50%;
         float: left;       
-}
+    }
     .col-1-3-lg img{
         display: inline;
         width:33.333%;
         float: left;       
-}
+    }
     .portfolio{
         margin-top: -2em;
         margin-bottom: 0em;
@@ -508,19 +533,17 @@ p {
     display: block;
     text-align: center;
     width: 90%;
-
+    }
 }
-
-}
-
+    
 @media screen and (min-width: 61em) {
 
 .header-image {
 	width:110%;
 	z-index:2;
-	right:-2em;
-	top:-11em;
-	margin-top: 5em;
+	right:2.2em;
+	top:-13em;
+	margin-top:5em;
 	position:relative;
 }
 
@@ -529,7 +552,7 @@ p {
 }
 .horizontal-socialmedia{
     display:block;
-    margin-top:-17em;
+    margin-top:-20em;
     margin-left:4em;
 }
 .socialmedia img{
@@ -554,7 +577,6 @@ p {
 	font-size: 20px;
 	overfow:hidden;
 }
-
 
 .initial-paragraph h1{
 	color:#568E7F;
@@ -605,8 +627,8 @@ p {
 
 }
 
-
-@media screen and (min-width: 70em) {
+/*YOU ARE EDITTING HERE*/
+@media screen and (min-width: 66em) {
 .header-image {
 	width:90%;
 	z-index:2;
